SERVER-66041 Chunk cloner must never consider `too big` a chunk with only one document